# BezierCEA

./: .clang-format  .gitignore  Bezier.cpp  Bezier.h  BezierMain.cpp  BezierView.cpp  CMakeLists.txt  CMakePresets.json  Color.h  Coord.cpp  Coord.h  TODOtest.md  View.cpp  View.h  conan_install.bat  conanfile.txt  main  main.cpp  set_venv.bat
result/: a_curve.vtk  a_point.vtk  b_curve.vtk  b_point.vtk  curv_deriv.vtk  curv_normals.vtk  curve.vtk  curve_bezier.vtk  curve_castel.vtk  lines.vtk  normals.vtk  point_deriv.vtk
src/: BezierMain.cpp  BezierView.cpp  CMakeLists.txt  Cli.cpp  Cli.h  Dump.cpp  Dump.h  View.cpp
src/Bezier/: Bezier.cpp  Bezier.h  BezierCurveCurveIntersection.cpp  BezierCurveCurveIntersection.h  BezierDecompose.cpp  BezierDecompose.h  BezierDerivate.cpp  BezierDerivate.h  BezierElevate.cpp  BezierElevate.h  BezierEvaluate.cpp  BezierEvaluate.h  BezierNormal.cpp  BezierNormal.h  BezierRayIntersection.cpp  BezierRayIntersection.h  BoundingBox.cpp  BoundingBox.h  Hull.cpp  Hull.h  PointOnCurve.cpp  PointOnCurve.h  intersect_points 
src/Geometry/: Circle.h  Coord.cpp  Coord.h  Doublons.h  Hull.cpp  Hull.h  Newton.cpp  Newton.h  Segment.cpp  Segment.h
src/IO/: Dump.cpp  Dump.h
src/View/: Cli.cpp  Cli.h  CurveDraw.h  View.cpp  View.h
tests/: CMakeLists.txt  testGeometry.cpp  testPointOnCurve.cpp  testRayIntersection.cpp  testRootsAndHull.cpp
